// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works with an inner image 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  height: 100%;
}

.c0:before {
  content: '';
  display: block;
  padding-bottom: calc(100% / (1 / 3));
}

.c0 > :first-child {
  position: absolute;
  object-fit: scale-down;
  object-position: 50% 50%;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
}

.c0 > img {
  height: auto;
}

<div
  class="c0"
>
  <img
    alt="cats"
    src="https://catpictures.test"
  />
</div>
`;

exports[`it works with object ratio 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  height: 100%;
}

.c0:before {
  content: '';
  display: block;
  padding-bottom: calc(100% / (1 / 3));
}

.c0 > :first-child {
  position: absolute;
  object-fit: scale-down;
  object-position: 50% 50%;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
}

.c0 > img {
  height: auto;
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with string ratio 1`] = `
.c0 {
  overflow: hidden;
  position: relative;
  height: 100%;
}

.c0:before {
  content: '';
  display: block;
  padding-bottom: calc(100% / (1 / 3));
}

.c0 > :first-child {
  position: absolute;
  object-fit: scale-down;
  object-position: 50% 50%;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
}

.c0 > img {
  height: auto;
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;
